--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 /* Style the header */
 header {
-  background-color: #666;
+  background-color: #9B997A;
   padding: 30px;
   text-align: center;
   font-size: 35px;
