--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ article {
   float: left;
   padding: 20px;
   width: 70%;
-  background-color: #FFFFFF;
+  background-color: #34495E;
   /* height: 300px;  only for demonstration, should be removed */
 }
 
