--- a/style.css
+++ b/style.css
@@ -3,17 +3,25 @@
 }
 
 body {
-  font-family: "Times New Roman", Times, serif;
-  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Style the header */
 header {
-  background-color: #333;
-  padding: 20px;
+  background-color: #6930C3;
+  padding: 30px;
   text-align: center;
-  font-size: 24px;
+  font-size: 35px;
   color: white;
+}
+
+/* Create two columns/boxes that floats next to each other */
+nav {
+  float: left;
+  width: 15%;
+  /*height: 300px;  only for demonstration, should be removed */
+  background: #FFFFFF;
+ padding: 20px;
 }
 
 /* Style the list inside the menu */
@@ -22,22 +30,12 @@ nav ul {
   padding: 0;
 }
 
-/* Style each menu item */
-nav li {
-  padding: 10px;
-  cursor: pointer;
-  border-bottom: 1px solid #ddd;
-}
-
-/* Set initial style for the selected menu item */
-nav li.active {
-  background-color: #F5F5F5;
-}
-
 article {
+  float: left;
   padding: 20px;
-  background-color: #F9F9F9;
-  display: none;
+  width: 70%;
+  background-color: #5390D9;
+  /* height: 300px;  only for demonstration, should be removed */
 }
 
 /* Clear floats after the columns */
@@ -49,16 +47,34 @@ section:after {
 
 /* Style the footer */
 footer {
-  background-color: #333;
+  background-color: #5E60CE;
   padding: 10px;
   text-align: center;
   color: white;
 }
 
-/* Responsive layout - make the menu and article full width on small screens */
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
 @media (max-width: 600px) {
   nav, article {
     width: 100%;
-    float: none;
+    height: auto;
   }
+}
+* {
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
